...
        TopAppBar(
            title = {},
            navigationIcon = {
              IconButton(onClick = onBack) {
                Icon(
                    Icons.AutoMirrored.Filled.ArrowBack,
                    contentDescription = "Back",
                    tint = MainColor)
              }
            })
      }) { inner ->
        Box(modifier = modifier.fillMaxSize().padding(inner).padding(horizontal = 24.dp)) {
          Column(
...
